--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">blockUTD</string>
+    <string name="onOffDesc">Activates/deactivates the app.</string>
 </resources>
