edited xml files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="onOffDesc">Activates/deactivates the app.</string>
     <string name="onOffText">Block now!</string>
     <string name="ethereumDesc">Picture of Ethereum</string>
+    <string name="etherMoney">0.00</string>
 </resources>
